third lab done