@@ -2,12 +2,12 @@ package ru.ulstu.reports.services;
 
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
-import ru.ulstu.reports.models.DTO.SupplierDTO;
+import ru.ulstu.reports.models.DTO.SupplierNumeratedDTO;
 import ru.ulstu.reports.models.mappers.SupplierMapper;
 import ru.ulstu.reports.repositories.SupplierRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicInteger;
 
 @Service
 @AllArgsConstructor
@@ -16,7 +16,18 @@ public class ReportsServiceImpl implements ReposrtsService {
     private final SupplierMapper mapper;
 
     @Override
-    public List<SupplierDTO> getByActive(Boolean isActive) {
-        return repo.findAllByIsActive(isActive).stream().map(mapper::mapToDTO).collect(Collectors.toList());
+    public List<SupplierNumeratedDTO> getByActive(Boolean isActive) {
+        List<SupplierNumeratedDTO> list = repo.findAllByIsActive(isActive).stream().map(mapper::mapToNumeratedDTO).toList();
+        AtomicInteger i = new AtomicInteger(1);
+        list.forEach(elem -> elem.setNum(i.getAndIncrement()));
+        return list;
+    }
+
+    @Override
+    public List<SupplierNumeratedDTO> getAll() {
+        List<SupplierNumeratedDTO> list =  repo.findAll().stream().map(mapper::mapToNumeratedDTO).toList();
+        AtomicInteger i = new AtomicInteger(1);
+        list.forEach(elem -> elem.setNum(i.getAndIncrement()));
+        return list;
     }
 }
